unpackaged/main/default/objects/Account/fields/Account_Category_GL__c.field-meta.xml
<CustomField>
    <fullName>Account_Category_GL__c</fullName>
    <inlineHelpText>Auto-Populated with GL associated with the Account&#39;s Category field.</inlineHelpText>
    <label>Account Category GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>