unpackaged/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Based off of the selected record type from fC/NPSP org</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Grantee</fullName>
            </value>
            <value>
                <fullName>Household Account</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>