unpackaged/main/default/objects/Account/fields/Active_Committee__c.field-meta.xml
<CustomField>
    <fullName>Active_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>is this committee still meeting regularly? default is yes</inlineHelpText>
    <label>Active Committee</label>
    <type>Checkbox</type>
</CustomField>