unpackaged/main/default/objects/Account/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <inlineHelpText>For records migrated from RE. The user that created the record in RE.</inlineHelpText>
    <label>Added By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>