unpackaged/main/default/objects/Account/fields/Additional_Org_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Org_Notes__c</fullName>
    <inlineHelpText>Add any additional relevant information regarding the Grantee.</inlineHelpText>
    <label>Additional Org Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>