unpackaged/main/default/objects/Account/fields/Advocacy_Org__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Org__c</fullName>
    <formula>if (ISPICKVAL(  Advocate_at_International_Level__c , &quot;Yes&quot;) || ISPICKVAL(  Advocate_at_International_Level__c , &quot;Yes&quot;) ||  ISPICKVAL(    Advocate_at_International_Level__c , &quot;Yes&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies all grantees involved in advocacy work on the international/national/local Levels (Formula field based on three Advocacy flag fields set by staff).</inlineHelpText>
    <label>Advocacy Org</label>
    <type>Checkbox</type>
</CustomField>