unpackaged/main/default/objects/Account/fields/Advocate_at_Local_Level__c.field-meta.xml
<CustomField>
    <fullName>Advocate_at_Local_Level__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if the grantee is involved in advocacy on a local level.</inlineHelpText>
    <label>Advocate at Local Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>