unpackaged/main/default/objects/Account/fields/AJWS_Autonumber_ID__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Autonumber_ID__c</fullName>
    <description>No longer used. Initially was part of setting the &#39;AJWS Organization ID&#39; for Grantee Account. However, &#39;AJWS Organization ID&#39; is now = GIFTS ID which is set by automation. This was done to avoid setting &#39;AJWS Organization ID&#39; for donor Accounts.</description>
    <inlineHelpText>No longer used. Initially was part of setting the &#39;AJWS Organization ID&#39; for Grantee Account. However, &#39;AJWS Organization ID&#39; is now = GIFTS ID which is set by automation. This was done to avoid setting &#39;AJWS Organization ID&#39; for donor Accounts.</inlineHelpText>
    <label>AJWS Autonumber ID</label>
    <type>AutoNumber</type>
</CustomField>