unpackaged/main/default/objects/Account/fields/AJWS_Funding_History__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Funding_History__c</fullName>
    <description>AJWS has awarded NUMBER grants totaling $AMOUNT</description>
    <formula>&quot;AJWS has awarded &quot; &amp; TEXT(of_Grants_Awarded_to_Grantee__c) &amp; &quot; grants totaling $&quot; &amp;
IF(
Sum_of_All_Grants_Awarded_to_Grantee__c &gt;= 1000000,
TEXT(FLOOR(Sum_of_All_Grants_Awarded_to_Grantee__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Sum_of_All_Grants_Awarded_to_Grantee__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Sum_of_All_Grants_Awarded_to_Grantee__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Sum_of_All_Grants_Awarded_to_Grantee__c)), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AJWS has awarded NUMBER grants totaling $AMOUNT</inlineHelpText>
    <label>AJWS Funding History</label>
    <type>Text</type>
</CustomField>