unpackaged/main/default/objects/Account/fields/AJWS_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Organization_ID__c</fullName>
    <formula>IF ( ISBLANK( GIFTS_ID__c ),   AJWS_Autonumber_ID__c  , GIFTS_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AJWS&#39; ID for Grantee Organization. Set by automation (the automation is on the GIFTS ID field and was designed to avoid assigning the &#39;AJWS Organization ID&#39; to donor Accounts).</inlineHelpText>
    <label>AJWS Organization ID</label>
    <type>Text</type>
</CustomField>