unpackaged/main/default/objects/Account/fields/AJWS_Staff__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies AJWS employees. Manually set.</inlineHelpText>
    <label>AJWS Staff</label>
    <type>Checkbox</type>
</CustomField>