unpackaged/main/default/objects/Account/fields/AJWS_Status__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Status__c</fullName>
    <inlineHelpText>Identifies current and former AJWS staff and board members. Used for Acknowledgments Letters.</inlineHelpText>
    <label>AJWS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Former Board</fullName>
            </value>
            <value>
                <fullName>Former Staff</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>