unpackaged/main/default/objects/Account/fields/AKA__c.field-meta.xml
<CustomField>
    <fullName>AKA__c</fullName>
    <inlineHelpText>Acronym or other known name of grantee/donor organization</inlineHelpText>
    <label>Acronym or &quot;Also Known As&quot;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>