unpackaged/main/default/objects/Account/fields/AKA_Organization__c.field-meta.xml
<CustomField>
    <fullName>AKA_Organization__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Conga Finance reports.</inlineHelpText>
    <label>AKA/Organization</label>
    <type>Text</type>
</CustomField>