unpackaged/main/default/objects/Account/fields/Alert_Text__c.field-meta.xml
<CustomField>
    <fullName>Alert_Text__c</fullName>
    <inlineHelpText>Enter alerts regarding this Grantee Organization.</inlineHelpText>
    <label>Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>