unpackaged/main/default/objects/Account/fields/Annual_Budget_2015__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget_2015__c</fullName>
    <inlineHelpText>Organization&#39;s annual operating budget for 2015.</inlineHelpText>
    <label>Annual Budget - 2015</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>