unpackaged/main/default/objects/Account/fields/Annual_Budget_2017__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget_2017__c</fullName>
    <inlineHelpText>Enter your organization&#39;s estimated 2017 operating budget here (in US dollars).</inlineHelpText>
    <label>Annual Budget - 2017</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>