unpackaged/main/default/objects/Account/fields/Annual_Giving_Rating__c.field-meta.xml
<CustomField>
    <fullName>Annual_Giving_Rating__c</fullName>
    <inlineHelpText>GGA Annual Giving Rating identifies a household&#39;s current annual giving level based upon largest single gift and whether they have the upgrade potential for the next largest band</inlineHelpText>
    <label>Annual Giving Rating</label>
    <length>25</length>
    <type>Text</type>
</CustomField>