unpackaged/main/default/objects/Account/fields/Annual_Report_Listing__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Listing__c</fullName>
    <inlineHelpText>Annual Report Listing.</inlineHelpText>
    <label>Annual Report Listing</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>