unpackaged/main/default/objects/Account/fields/Annual_Report_Only__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Donor requested to receive no mailings except our annual report mailing.</inlineHelpText>
    <label>Annual Report Only</label>
    <type>Checkbox</type>
</CustomField>