unpackaged/main/default/objects/Account/fields/Annual_Solicitation_Only__c.field-meta.xml
<CustomField>
    <fullName>Annual_Solicitation_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Donor requested one solicitation per year.</inlineHelpText>
    <label>Annual Solicitation Only</label>
    <type>Checkbox</type>
</CustomField>