unpackaged/main/default/objects/Account/fields/Applying_for_Prior_Permission__c.field-meta.xml
<CustomField>
    <fullName>Applying_for_Prior_Permission__c</fullName>
    <inlineHelpText>Used for Indian partner grantees.</inlineHelpText>
    <label>Applying for Prior Permission</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>