unpackaged/main/default/objects/Account/fields/Average_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Amount__c</fullName>
    <inlineHelpText>Average HARD CREDIT Donation.</inlineHelpText>
    <label>Average Gift</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>