unpackaged/main/default/objects/Account/fields/Best_Gift_Year__c.field-meta.xml
<CustomField>
    <fullName>Best_Gift_Year__c</fullName>
    <inlineHelpText>&quot;The FY in which the donor gave the highest gifts total (HARD Credit Only) 
Also see &#39;Best Gift Year Total&#39;.&quot;</inlineHelpText>
    <label>Best Gift Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>