unpackaged/main/default/objects/Account/fields/Best_Gift_Year_Total__c.field-meta.xml
<CustomField>
    <fullName>Best_Gift_Year_Total__c</fullName>
    <inlineHelpText>&quot;The highest sum of HARD Credit gifts given by this donor in one FY.  
Also see &#39;Best Gift Year&#39;.&quot;</inlineHelpText>
    <label>Best Gift Year Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>