unpackaged/main/default/objects/Account/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <inlineHelpText>Is this grantee organization blacklisted?</inlineHelpText>
    <label>Blacklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>