unpackaged/main/default/objects/Account/fields/Board_List__c.field-meta.xml
<CustomField>
    <fullName>Board_List__c</fullName>
    <inlineHelpText>Please list your board members.</inlineHelpText>
    <label>Board List</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>