unpackaged/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Individual for HH Accounts. Select for non-household Accounts (e.g. Family Foundation or Congregation). Determines the Revenue GL Code associated with the Account (used in gift coding) + part of process to set Reporting Category on gifts from Account.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Committee</fullName>
            </value>
            <value>
                <fullName>Board Task Force</fullName>
            </value>
            <value>
                <fullName>Congregation</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Donor-Advised Fund</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Family Foundation</fullName>
            </value>
            <value>
                <fullName>Federation</fullName>
            </value>
            <value>
                <fullName>GC Steering Committee</fullName>
            </value>
            <value>
                <fullName>Government Organization</fullName>
            </value>
            <value>
                <fullName>Hillel</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Individual-DAF</fullName>
            </value>
            <value>
                <fullName>Individual-Trust</fullName>
                <label>Trust</label>
            </value>
            <value>
                <fullName>Jewish Organization</fullName>
            </value>
            <value>
                <fullName>Leadership Council</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Professional Foundation</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Wellspring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>