unpackaged/main/default/objects/Account/fields/Combined_Credit_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Combined_Credit_Last_Year__c</fullName>
    <formula>OppAmountLastYear__c +  Total_Soft_Credits_Last_Year__c+ Partial_Soft_Credit_Previous_FY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all gifts (hard credit/soft credit/partial soft credit) made by this Account in the previous FY. Based on NPSP Rollups.</inlineHelpText>
    <label>Combined Credit Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>