unpackaged/main/default/objects/Account/fields/Combined_First_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Combined_First_Gift_Date__c</fullName>
    <formula>IF( 
AND( 
ISBLANK( FirstCloseDate__c ), 
ISBLANK( First_Soft_Credit_Gift_Date__c ),
ISBLANK(First_Partial_Soft_Credit_Gift__c)

), 
NULL, 
DATE(2998,1,1) - MAX( 
DATE(2998,1,1) - BLANKVALUE( FirstCloseDate__c , DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE( First_Soft_Credit_Gift_Date__c , DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(First_Partial_Soft_Credit_Gift__c, DATE(2998,1,1))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date the first gift was received from this Account (including hard/soft/partial soft credit gifts). Based on NPSP rollups.</inlineHelpText>
    <label>Combined First Gift Date</label>
    <type>Date</type>
</CustomField>