unpackaged/main/default/objects/Account/fields/Combined_Gifts_Total_since_inception__c.field-meta.xml
<CustomField>
    <fullName>Combined_Gifts_Total_since_inception__c</fullName>
    <formula>TotalOppAmount__c  +  Total_Soft_Credits__c+ Total_Partial_Soft_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Gifts Total (since inception)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>