unpackaged/main/default/objects/Account/fields/Combined_Largest_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Combined_Largest_Gift_Amount__c</fullName>
    <formula>max(  LargestAmount__c ,  Largest_Soft_Credit_Amount__c ,  Largest_Partial_Soft_Credit_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Largest gift amount including hard, soft and partial soft credit. Based on NPSP rollups.</inlineHelpText>
    <label>Combined Largest Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>