unpackaged/main/default/objects/Account/fields/Combined_Largest_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Combined_Largest_Gift_Date__c</fullName>
    <formula>if ( Combined_Largest_Gift_Amount__c =   LargestAmount__c ,  Largest_Gift_Date__c, if ( Combined_Largest_Gift_Amount__c =  Largest_Soft_Credit_Amount__c ,   Largest_Soft_Credit_Date__c ,  Largest_Partial_Soft_Credit_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date of the largest gift received from this Account (includes hard, soft, and partial soft credit gifts). Based on NPSP rollups.</inlineHelpText>
    <label>Combined Largest Gift Date</label>
    <type>Date</type>
</CustomField>