unpackaged/main/default/objects/Account/fields/Combined_Last_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Combined_Last_Gift_Amount__c</fullName>
    <formula>If (Combined_Last_Gift_Date__c =  Last_Gift_Date__c  ,  Last_Gift_Amount__c  , if(Combined_Last_Gift_Date__c = Last_Soft_Credit_Date__c ,  Last_Soft_Credit_Gift_Amount__c  , Last_Partial_Soft_Credit_Gift_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of the last gift received from this Account (including hard, soft and partial soft credit gifts). Based on NPSP rollups.</inlineHelpText>
    <label>Combined Last Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>