unpackaged/main/default/objects/Account/fields/Combined_Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Combined_Last_Gift_Date__c</fullName>
    <description>The date of the last gift received from this Account (including hard, soft and partial soft credit gifts). Based on NPSP rollups.</description>
    <formula>IF(
    AND(
        ISBLANK(  Last_Gift_Date__c  ),
        ISBLANK(Last_Soft_Credit_Date__c),
        ISBLANK(  Last_Partial_Soft_Credit_Gift_Date__c  )  
    ),
    NULL,
    DATE(1900, 01, 01) + 
    MAX(

BLANKVALUE( Last_Gift_Date__c  , DATE(1900, 01, 01)) - DATE(1900, 01, 01), 
BLANKVALUE(Last_Soft_Credit_Date__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01), 
BLANKVALUE( Last_Partial_Soft_Credit_Gift_Date__c  , DATE(1900, 01, 01)) - DATE(1900, 01, 01)
        
        
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date of the last gift received from this Account (including hard, soft and partial soft credit gifts). Based on NPSP rollups.</inlineHelpText>
    <label>Combined Last Gift Date</label>
    <type>Date</type>
</CustomField>