unpackaged/main/default/objects/Account/fields/Combined_Total_Number_of_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Combined_Total_Number_of_Gifts__c</fullName>
    <description>Combined total number of gifts including hard, soft, and partial soft credit gifts. Based on NPSP rollups.</description>
    <formula>Total_of_Partial_Soft_Credit_Gifts__c  +   Total_Number_of_Gifts__c  + Total_Number_of_Soft_Credit_Gifts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combined total number of gifts including hard, soft, and partial soft credit gifts. Based on NPSP rollups.</inlineHelpText>
    <label>Combined Total Number of Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>