unpackaged/main/default/objects/Account/fields/Committee_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Committee_Purpose__c</fullName>
    <inlineHelpText>describe the committee&#39;s oversight + reason for existing</inlineHelpText>
    <label>Committee Purpose</label>
    <type>TextArea</type>
</CustomField>