unpackaged/main/default/objects/Account/fields/Conga_Formatted_Largest_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Formatted_Largest_Gift_Date__c</fullName>
    <formula>TEXT(YEAR( Combined_Largest_Gift_Date__c )) &amp; &quot;-&quot; &amp;

IF(MONTH(Combined_Largest_Gift_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp;
TEXT(MONTH(Combined_Largest_Gift_Date__c )) &amp; &quot;-&quot;&amp;

IF(DAY(Combined_Largest_Gift_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp;
TEXT(DAY(Combined_Largest_Gift_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used on donor profile and other Conga templates.</inlineHelpText>
    <label>Conga - Formatted Largest Gift Date</label>
    <type>Text</type>
</CustomField>