unpackaged/main/default/objects/Account/fields/Consolidated_Receipt_Preference__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Receipt_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates donor prefers one consolidated receipt for multiple gifts within a calendar year.</description>
    <inlineHelpText>Check this box if the donor has requested a single annual consolidated receipt</inlineHelpText>
    <label>Consolidated Receipt Preference</label>
    <type>Checkbox</type>
</CustomField>