unpackaged/main/default/objects/Account/fields/Consolidated_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Donor asked for a consolidated receipt for all annual donations (instead of individual receipts for each donation).</inlineHelpText>
    <label>Consolidated Receipts</label>
    <type>Checkbox</type>
</CustomField>