unpackaged/main/default/objects/Account/fields/Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preference__c</fullName>
    <description>Used to record nuanced donor contact requests</description>
    <inlineHelpText>Enter any special contact instructions or donor preferences.</inlineHelpText>
    <label>Contact Preference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>