unpackaged/main/default/objects/Account/fields/Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences__c</fullName>
    <inlineHelpText>for unique contact preferences (i.e. if a donor just asks to be marked DNC, etc fill out the solicit code instead of leaving a note)</inlineHelpText>
    <label>Contact Preferences</label>
    <length>60</length>
    <type>Text</type>
</CustomField>