unpackaged/main/default/objects/Account/fields/Contact_Preferences_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences_Reviewed__c</fullName>
    <inlineHelpText>date Contact Preferences text field was last reviewed by RM or DevOps</inlineHelpText>
    <label>Contact Preferences Reviewed</label>
    <type>Date</type>
</CustomField>