unpackaged/main/default/objects/Account/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to current Address Record (holds the address showing on the Account record).</inlineHelpText>
    <label>Current Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>