unpackaged/main/default/objects/Account/fields/Current_Address_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Address_End_Date__c</fullName>
    <formula>Current_Address__r.Latest_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End Date on current Address record.</inlineHelpText>
    <label>Current Address End Date</label>
    <type>Date</type>
</CustomField>