unpackaged/main/default/objects/Account/fields/Current_Ladder__c.field-meta.xml
<CustomField>
    <fullName>Current_Ladder__c</fullName>
    <inlineHelpText>AJWS Donor Ladder designation for Account. Auto-assigned based on the donor&#39;s best giving year (hard + soft credit) in the last 3 calendar years (i.e. current year + 2 years back). DOES NOT DOWNGRADE LADDER DESIGNATION! DOWNGRADE SHOULD BE DONE MANUALLY.</inlineHelpText>
    <label>Current Ladder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>President’s Circle</fullName>
            </value>
            <value>
                <fullName>Global Visionaries</fullName>
            </value>
            <value>
                <fullName>Global Champions</fullName>
            </value>
            <value>
                <fullName>Possibility Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>