unpackaged/main/default/objects/Account/fields/DAF_Payment__c.field-meta.xml
<CustomField>
    <fullName>DAF_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Household that has received soft credit for a gift made by an Organization with Category = Individual-DAF</inlineHelpText>
    <label>DAF Payment</label>
    <type>Checkbox</type>
</CustomField>