unpackaged/main/default/objects/Account/fields/Date_Annual_Report_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Annual_Report_Verified__c</fullName>
    <inlineHelpText>Date annual report listing verified with donor.</inlineHelpText>
    <label>Date Annual Report Verified</label>
    <type>Date</type>
</CustomField>