unpackaged/main/default/objects/Account/fields/datefield1__c.field-meta.xml
<CustomField>
    <fullName>datefield1__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>