unpackaged/main/default/objects/Account/fields/Decision_Making__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making__c</fullName>
    <formula>&quot;A decision-making role is defined as one that guides the way programmatic work is designed and implemented, and does not include administrative or support roles.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A decision-making role is defined as one that guides the way programmatic work is designed and implemented, and does not include administrative or support roles.</inlineHelpText>
    <label>Decision Making</label>
    <type>Text</type>
</CustomField>