unpackaged/main/default/objects/Account/fields/Denomination__c.field-meta.xml
<CustomField>
    <fullName>Denomination__c</fullName>
    <inlineHelpText>Religion for this Account.</inlineHelpText>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atheist</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Christian - Catholic</fullName>
            </value>
            <value>
                <fullName>Christian - Other</fullName>
            </value>
            <value>
                <fullName>Christian - Protestant</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Jewish - Conservative</fullName>
            </value>
            <value>
                <fullName>Jewish - Culturally Jewish</fullName>
            </value>
            <value>
                <fullName>Jewish - Humanistic/Secular</fullName>
            </value>
            <value>
                <fullName>Jewish - Non-denominational (AJR)</fullName>
            </value>
            <value>
                <fullName>Jewish - Non-denominational (HC)</fullName>
            </value>
            <value>
                <fullName>Jewish - Orthodox</fullName>
            </value>
            <value>
                <fullName>Jewish - Other</fullName>
            </value>
            <value>
                <fullName>Jewish - Post-denominational</fullName>
            </value>
            <value>
                <fullName>Jewish - Reconstructionist</fullName>
            </value>
            <value>
                <fullName>Jewish - Reform</fullName>
            </value>
            <value>
                <fullName>Jewish - Renewal</fullName>
            </value>
            <value>
                <fullName>Jewish - Traditional</fullName>
            </value>
            <value>
                <fullName>Jewish - Unaffiliated</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>N/A - Researched Not Found</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Conservative</fullName>
                <isActive>false</isActive>
                <label>Conservative</label>
            </value>
            <value>
                <fullName>Conservative/Reconst</fullName>
                <isActive>false</isActive>
                <label>Conservative/Reconst</label>
            </value>
            <value>
                <fullName>Conservative/Reconstructionist</fullName>
                <isActive>false</isActive>
                <label>Conservative/Reconstructionist</label>
            </value>
            <value>
                <fullName>Humanistic</fullName>
                <isActive>false</isActive>
                <label>Humanistic</label>
            </value>
            <value>
                <fullName>Independent</fullName>
                <isActive>false</isActive>
                <label>Independent</label>
            </value>
            <value>
                <fullName>Jewish - Jewish Renewal</fullName>
                <isActive>false</isActive>
                <label>Jewish - Jewish Renewal</label>
            </value>
            <value>
                <fullName>Jewish - Modern Orthodox</fullName>
                <isActive>false</isActive>
                <label>Jewish - Modern Orthodox</label>
            </value>
            <value>
                <fullName>Jewish Renewal</fullName>
                <isActive>false</isActive>
                <label>Jewish Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>